--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    margin-bottom: 5rem;
 }
 
 .header {
@@ -36,6 +38,10 @@ body {
     text-transform: uppercase;
     letter-spacing: 1.1rem;
     color: #fff;
+}
+
+.header img {
+    cursor: not-allowed;
 }
 
 .todo-container {
@@ -146,5 +152,10 @@ form input {
 .active-checkbox + p {
     text-decoration: line-through;
     color: hsl(233, 14%, 35%);
+}
+
+.clear-completed:hover {
+    cursor: pointer;
+    color: #fff;
 }
 
